5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1723_2508.log
== TEST (2019-05-13 22:44:49) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 0

while (i<=n-1):
	soma = soma + (-1)**i * (4)/(2*(2*i+1))*(3*(2*i+1))*(4*(2*i+1))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
123.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:50:46) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 0

while (i<=n-1):
	soma = soma + (1)**i * (4)/(2*(2*i+1))*(3*(2*i+1))*(4*(2*i+1))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
603.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:51:04) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 0

while (i<=n-1):
	soma = soma + (1)**i * (4)/(2*(2*i+1))*(3*(2*i+1))*(4*(2*i+1))
	i = i + 1
	
print(round(soma , 8))

-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:53:53) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 0

while (i<=n-1):
	soma = soma + (1)**i * (4)/(2*i)*(3*(2*i+1))*(4*i)
	i = i + 1
	
print(round(soma + 3, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (1)**i * (4)/(2*i)*(3*(2*i+1))*(4*i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:54:56) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/(2*i)*(3*(2*i+1))*(4*i)
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
579.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:56:53) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4/(2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
579.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:57:06) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/(2*i)*(3*(2*i+1))*(4*i)
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
579.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:57:20) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/(2*i)*(3*(2*i+1))*(4*i)
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
99.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:57:53) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.0676918
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:58:14) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
2.95128968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:58:31) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.0676918
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:59:21) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.0676918
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:59:25) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.0676918
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:59:29) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.0676918
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:59:43) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(3*(2*i+1))*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.0676918
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:00:49) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:00:57) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:05) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:10) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:19) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:23) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:01:29) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- EXECUTION TIME:
0.182783
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.2030754
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.20849524
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.20840287
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:31) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:53) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:01:59) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:02:03) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:02:55) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:03:16) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:03:44) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:03:47) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:03:50) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:03:53) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:03:58) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * (4)/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:04:34) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:04:38) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:05:24) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma - (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:05:30) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma - (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:05:33) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma - (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:07:57) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:02) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:44) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:50) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:09:45) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
o = 0
while (i<=n-1):
	soma = soma + (-1)**o * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	o = o + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:09:50) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
o = 0
while (i<=n-1):
	soma = soma + (-1)**o * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	o = o + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:10:00) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
o = 0
while (i<=n-1):
	soma = soma + (-1)**o * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	o = o + 1
print(round(soma + 3, 8))

-- EXECUTION TIME:
0.201303
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14613095
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14730226
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14727087
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:03) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
o = 0
while (i<=n-1):
	soma = soma + (-1)**o * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
	o = o + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:35) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:11:51) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:11:57) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:23) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(2*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.7077381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:29) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(2*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.7077381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:32) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(2*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.7077381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:13:36) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(2*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.7077381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:18:14) 
-- CODE:
n = int(input("valor de n: "))

soma = 1
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:18:20) 
-- CODE:
n = int(input("valor de n: "))

soma = 1
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:24) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:33) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (-1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:19:59) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (+1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:20:03) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + (+1)**i * 4/((2*i)*(2*i+1)*(4*i))
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:20:57) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
NameError: name 'sinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:21:01) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
NameError: name 'sinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:21:21) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:21:25) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:21:28) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:21:42) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- EXECUTION TIME:
0.137712
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14613095
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14730226
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14727087
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:21:46) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:22:00) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = + sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:22:22) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * (4/((2*i)*(2*i+1)*(4*i)))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:22:26) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1
while (i<=n-1):
	soma = soma + sinal * (4/((2*i)*(2*i+1)*(4*i)))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:23:40) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:23:47) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:47:54) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * (4/((2*i)*(2*i+1)*(4*i)))+3
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
12.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:48:13) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
0.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:48:22) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:48:27) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:48:42) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))+ 3
	sinal = - sinal
	i = i + 1
print(round(soma , 8))

-- OUTPUT:
12.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:49:15) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i)) + 3
	sinal = - sinal
	i = i + 1
print(round(soma , 8))

-- OUTPUT:
12.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:49:21) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i)) + 3
	sinal = - sinal
	i = i + 1
print(round(soma , 8))

-- OUTPUT:
12.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:49:27) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i)) + 3
	sinal = - sinal
	i = i + 1
print(round(soma , 8))

-- OUTPUT:
12.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:49:32) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i)) + 3
	sinal = - sinal
	i = i + 1
print(round(soma , 8))

-- OUTPUT:
12.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:50:14) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
6.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:50:29) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:50:34) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:50:37) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:50:55) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- EXECUTION TIME:
0.16577
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14613095
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14730226
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14727087
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:51:51) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:51:55) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:51:58) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:52:03) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:52:06) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:52:10) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:52:43) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/(2*i)*(2*i+1)*(4*i)
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
-29.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:52:55) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:53:25) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = + sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:53:35) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = + sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:53:40) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = + sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:53:46) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = + sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:53:49) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = + sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:53:52) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = + sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.2030754
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:54:28) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * -4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
2.85386905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:55:23) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:31) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:34) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:36) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:50) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:55) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:08:57) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:20) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:30) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:36) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:18:39) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- EXECUTION TIME:
0.128236
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14613095
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14730226
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14727087
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:40) 
-- CODE:
n = int(input("valor de n: "))

soma = 0
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(4*i))
	sinal = - sinal
	i = i + 1
print(round(soma + 3, 8))

-- OUTPUT:
3.14613095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:55) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(2*i+2))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:01) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(2*i+2))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:03) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(2*i+2))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:45:07) 
-- CODE:
n = int(input("valor de n: "))

soma = 3
i = 1
sinal = +1

while (i<=n-1):
	soma = soma + sinal * 4/((2*i)*(2*i+1)*(2*i+2))
	sinal = - sinal
	i = i + 1
print(round(soma, 8))

-- EXECUTION TIME:
0.121193
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
